--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Run markdown lint
         run: |
           cd $GITHUB_WORKSPACE
-          npm install remark remark-cli remark-preset-lint-consistent
+          npm install remark-cli remark-preset-lint-consistent
           npm remark . --use remark-preset-lint-consistent --frail
