--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           npm install remark-cli remark-preset-lint-consistent
-          npm remark . --use remark-preset-lint-consistent --frail
+          npx remark . --use remark-preset-lint-consistent --frail
